--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,15 @@ github_username: Ellen-code-dev
 minimal_mistakes_skin: default
 search: true
 
+# Navigation menu at the top of the site
+header_pages:
+  - /about/
+  - /resume/
+  - /projects/
+  - /lab-challenges/
+  - /contact/
+  - /blog/
+
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
