--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,14 @@
 main:
+  - title: "Home"
+    url: /
+  - title: "Resume"
+    url: /resume/
+  - title: "Projects"
+    url: /projects/
+  - title: "Lab Challenges"
+    url: /labs/
+  - title: "Contacts"
+    url: /contacts/
   - title: "Posts"
     url: /posts/
   - title: "Categories"
